--- a/backChat/src/main/resources/application.properties
+++ b/backChat/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-# Informations sur la BDD à exploiter
-# ajouter "?serverTimezone=GMT" à l'url est obligatoire pour MySQL 5
-spring.datasource.url=jdbc:mysql://mysql-docker:3306/mini_chat?serverTimezone=GMT
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/messenger
 spring.datasource.username=root
-spring.datasource.password=root
-# Autoriser l'affichage des requêtes SQL faites par Hibernate
+spring.datasource.password=stella
+e
 spring.jpa.show-sql=true
-# Gérer Hibernate
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
